tests/ui/consts/const-eval/issue-49296.stderr
error[E0080]: memory access failed: ALLOC0 has been freed, so this pointer is dangling
  --> $DIR/issue-49296.rs:9:16
   |
LL | const X: u64 = *wat(42);
   |                ^^^^^^^^ evaluation of `X` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
